feat(consumer, metrics): add metrics use case, entity, repository, service, controller and swagger mapping
