# consumer/internal/entities/Metrics.go
@@ -5,3 +5,10 @@ type Metrics struct {
 	Count        int64   `json:"count"`
 	AverageValue float64 `json:"averageValue"`
 }
+
+type MetricsSinceDayOne struct {
+	EventType    string  `json:"eventType"`
+	Count        int64   `json:"count"`
+	Sum          float64 `json:"sum"`
+	AverageValue float64 `json:"averageValue"`
+}
